<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="center"
        app:srcCompat="@mipmap/profilepic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="#000"
        android:layout_marginTop="15dp"/>
    <TextView
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#000"
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:textColor="#000"
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:textColor="#000"
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:id="@+id/tvAddresP"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"/>

</LinearLayout>